Accordion button styling

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
-						<div id="project-one-img" class="col-10 col-md-4 bg-secondary project-img">Section for img</div>
+						<div id="project-one-img" class="col-10 col-md-4 project-img">Section for img</div>
 					</div>
 				</div>
 				<div class="accordion-item">
@@ -169,7 +169,7 @@
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
-						<div id="project-two-img" class="col-10 col-md-4 bg-secondary project-img">Section for img</div>
+						<div id="project-two-img" class="col-10 col-md-4 project-img">Section for img</div>
 					</div>
 				</div>
 				<div class="accordion-item">
@@ -183,7 +183,7 @@
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
-						<div id="project-three-img" class="col-10 col-md-4 bg-secondary project-img">Section for img</div>
+						<div id="project-three-img" class="col-10 col-md-4 project-img">Section for img</div>
 					</div>
 				</div>
 			</section>
