--- a/index.html
+++ b/index.html
@@ -157,25 +157,25 @@
 			
 				<div class="card-group">
 					<div class="card">
-					<img src="./images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background">
-					<div class="card-body">
-						<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 1</a></h3>
-						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<a href="#" target="_blank">View project</a>
-					</div>
+						<a href="#" target="_blank"><img src="./images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background"></a>
+						<div class="card-body">
+							<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 1</a></h3>
+							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+							<a href="#" target="_blank">View project</a>
+						</div>
 					</div>
 					
 					<div class="card">
-					<img src="./images/computer-screens.png" class="card-img-top" alt="Two computer screens on a plain blue background">
-					<div class="card-body">
-						<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 2</a></h3>
-						<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" target="_blank">View project</a>
-					</div>
+						<a href="#" target="_blank"><img src="./images/computer-screens.png" class="card-img-top" alt="Two computer screens on a plain blue background"></a>
+						<div class="card-body">
+							<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 2</a></h3>
+							<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+							<a href="#" target="_blank">View project</a>
+						</div>
 					</div>
 
 					<div class="card">
-					<img src="./images/coding.jpg" class="card-img-top" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
+						<a href="#" target="_blank"><img src="./images/coding.jpg" class="card-img-top" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
 					<div class="card-body">
 						<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 3</a></h3>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
