Add aria-label to project links

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						<div class="card-body">
 							<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 1</a></h3>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-							<a href="#" target="_blank">View project</a>
+							<a href="#" target="_blank" aria-label="View Project 1 in a new tab">View project</a>
 						</div>
 					</div>
 					
@@ -170,7 +170,7 @@
 						<div class="card-body">
 							<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 2</a></h3>
 							<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-							<a href="#" target="_blank">View project</a>
+							<a href="#" target="_blank" aria-label="View Project 2 in a new tab">View project</a>
 						</div>
 					</div>
 
@@ -179,7 +179,7 @@
 					<div class="card-body">
 						<h3 class="card-title"><a class="card-title-link" href="#" target="_blank">Project 3</a></h3>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-						<a href="#" target="_blank">View project</a>
+						<a href="#" target="_blank" aria-label="View Project 3 in a new tab">View project</a>
 					</div>
 					</div>
 				</div>
