Carousel sizing edit for responsive

--- a/index.html
+++ b/index.html
@@ -71,22 +71,26 @@
 			<section id="about" class="row scroll-margin-top">
 
 					<!-- About -->
-					<div class="col-12 col-md-6">
+					<div class="col-12 col-lg-6">
 						<h2>Hello, I'm Jen</h2>
 						<p>I'm a web developer and former software automation tester at Sky UK Ltd, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
 						<p>In nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 					</div>
 
 					<!-- Carousel -->
-					<div id="img-carousel-about" class="col-12 col-md-6 mt-md-3">
+					<div id="img-carousel-about" class="col-12 col-lg-6 mt-md-3">
 						<div id="carouselExampleIndicators" class="carousel slide">
 							<div class="carousel-indicators">
 								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
 							</div>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
+									<img src="./images/profile-img-main.jpeg" class="d-block w-100" alt="Photo of Jen sitting in front of a digital piano with a music book open on the music stand, a green ornamental duck in a pink hat sitting on the left side of the piano and a large green clock on the wall behind">
+								</div>
+								<div class="carousel-item">
 									<img src="./images/coding.jpg" class="d-block w-100" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
 								</div>
 								<div class="carousel-item">
