--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div class="col-12 col-lg-6">
 						<h2>Hello, I'm Jen</h2>
 						<p>I'm a web developer and former software automation tester at Sky UK Ltd, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
-						<p>In nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+						<p>In nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et.</p>
 					</div>
 
 					<!-- Carousel -->
@@ -193,7 +193,7 @@
 			<!-- Contact Section -->
 			<section id="contact" class="row scroll-margin-top">
 				<h2>Contact</h2>
-					<form id="contact-form" method="post" action="#" class="col-12 col-lg-8">
+					<form id="contact-form" method="post" action="#">
 						<fieldset class="mb-3 contact-form">
 							<label for="first-name" class="form-label">First name:</label>
 							<input type="text" class="form-control" id="first-name" aria-labelledby="first-name" required>
@@ -221,12 +221,6 @@
 							<button id="contact-submit-btn" type="submit" class="btn btn-primary float-end">Submit</button>
 						</fieldset>
 					</form>
-
-					<!-- Section with Profile Image - Hidden on xs to md Screens -->
-					<div id="contact-img-section" class="col-12 col-lg-4 d-none d-lg-block">
-						<img src="./images/profile-img-contact.jpeg" alt="Photo of Jen Patchett" class="profile-img">
-					</div>
-					
 			</section>
 
 		</main>
