--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 				<div class="container-fluid mx-2 mx-xl-4">
 				<a class="navbar-brand" href="#">
-					<img src="./images/profile-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
+					<img src="./images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
       				Jen Patchett
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
